5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1582_1326.log
== TEST (2019-03-12 17:40:33) 
-- CODE:
print(R$ 40)
print(R$ 
	35)
-- ERROR:
File "XXXX", line 1
    print(R$ 40)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:38) 
-- CODE:
print(R$ 40)
print(R$ 35)
-- ERROR:
File "XXXX", line 1
    print(R$ 40)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:12) 
-- CODE:
print(40 + 35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:16) 
-- CODE:
print(40 + 35)
-- EXECUTION TIME:
0.202773
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
